# Lukoil-boiler-project

./: .gitignore  README.md  requirements.txt
docs/: api.md  boiler.md  gitflow.md  github-flow.md  opc_da.md  opc_ua.md  pid-controller.md  scada.md  ui.md
interface/: index.html  style.css
src/: .env.example  boiler.db  database_strategy.py  history_logger.py  opc_server.py  opc_tags.py  pyproject.toml  requirements.txt  run_server.py
src/api/: api_model.py  api_server.py  controllers.py  data.py  graph.py
src/db/: config.py  database_strategy.py  db_context.py  db_repository.py  fabric.py  history_logger.py
src/db/strategies/: abs_strategy.py  pg_stategy.py  sqlite_strategy.py
src/model/: __init__.py  model.py  optionsBoiler.py  optionsValve.py  run_model.py  valve.py
src/opc/: __init__.py  opc_client.py  opc_server.py  opc_tags.py  run_server.py
src/pid/: optionsPID.py  pid_controller.py  run_pid.py
src/ui/: index.html  mock.js  script.js  style.css
src/ui/css/: style.css
src/ui/js/: script.js
src/ui/template/: index.html
