[project]
name = "src"
version = "0.1.0"
description = "lukoil project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncua>=2.0.1",
    "black>=26.5.1",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "uvicorn>=0.51.0",
]
